--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,10 @@
         "react/react-in-jsx-scope": 2,
         "import/prefer-default-export": "off",
         "no-plusplus": 0,
-        "no-unreachable": 0
+        "no-unreachable": 0,
+        "import/no-unresolved": 0,
+        "no-param-reassign": 0,
+        "quotes": [2, "single", { "avoidEscape": true }],
+        "array-callback-return": 0
     }
 }
