--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.18.1",
     "react-modal": "^3.12.1",
     "react-redux": "^7.2.3",
     "react-router": "^5.2.0",
