--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,9 +4,7 @@
         "es2021": true
     },
     "extends": [
-        "airbnb/base",
-        "prettier",
-        "eslint:recommended"
+        "airbnb"
     ],
     "parserOptions": {
         "ecmaFeatures": {
@@ -29,6 +27,13 @@
         "import/no-unresolved": 0,
         "no-param-reassign": 0,
         "quotes": [2, "single", { "avoidEscape": true }],
-        "array-callback-return": 0
+        "array-callback-return": 0,
+        "no-undef": 0,
+        "react/jsx-filename-extension": 0,
+        "jsx-quotes": ["error", "prefer-single"],
+        "react/prop-types": 0,
+        "react/jsx-props-no-spreading": 0,
+        "jsx-a11y/anchor-is-valid": 0,
+        "import/no-extraneous-dependencies": 0
     }
 }
